# rd-capitalization-inquiry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  ai_usage_statement.md  ai_worklog_all.md  demo_script.md  difficulty_declaration.md  final_report.md  pyproject.toml  requirements.txt  run.py  team_info.md
configs/: crawl.yaml  mineru_config_legacy.json  model_config.yaml  section_rules.yaml  workflow.yaml
docs/: HANDOFF.md  README.md  ai_usage_statement.md  architecture.md  cninfo_data_discovery.md  cninfo_external_references.md  cninfo_official_api_annual_report.md  cninfo_official_api_catalog.json  cninfo_official_api_catalog.md  cninfo_official_api_reference.md  crawl_spec.md  eval_report_template.md  methodology.md  mineru_api_docs_extracted.md  mineru_api_reference.md  mineru_setup.md  output_sample.md  parse_check.md  presentation_checklist.md  tool_setup_check.md  topic_ideas.md  topic_proposal.md  workflow_design.md
outputs/: dataset_check_report.md  final_report_auto.md  final_slides.pptx  ppt_outline.md
prompts/: prompt_final.md  prompt_v1.md
scripts/: build_ai_review.py  build_mineru_md.py  catalog_to_markdown.py  export_pdf.ps1  fetch_cninfo_api_metadata.py  generate_cninfo_api_docs.py  generate_pptx.js  rebuild_single_annual_report.py  run_eval.py  setup_mineru.ps1
src/: common.py  main.py
tests/: test_crawl_official_api.py  test_downstream_scaffold.py  test_fetch_cninfo_api_metadata.py  test_inquiry_crawler.py  test_inquiry_labeler.py  test_llm_extractor.py  test_main.py  test_mineru_api_parser.py  test_mineru_parser.py  (+4 more)
(+41 files in other folders)
